Local view + Geometry Nodes is broken for instances #94113

Closed
opened 2021-12-15 15:29:45 +01:00 by Marcin Twarowski · 8 comments

Blender Version
Working: 752c6d668b~ (2.93)
Broken: 752c6d668b (3.0)

Exact steps for others to reproduce the error
geo_nodes_instances_local_view.blend

  • Open attached blend file.
  • On selected object with geometry nodes ("Cube") switch to local view.
  • Then back to global.
  • Then back to local again.

The objects disappear from view.

Note: Pressing "," (frame selected), "home" (frame all) or "shift+c" (center view and frame all) will bring the objects back to view.

**Blender Version** Working: 752c6d668b~ (2.93) Broken: 752c6d668b (3.0) **Exact steps for others to reproduce the error** [geo_nodes_instances_local_view.blend](https://archive.blender.org/developer/F12748039/geo_nodes_instances_local_view.blend) * Open attached blend file. * On selected object with geometry nodes ("Cube") switch to local view. * Then back to global. * Then back to local again. The objects disappear from view. Note: Pressing "," (frame selected), "home" (frame all) or "shift+c" (center view and frame all) will bring the objects back to view.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can confirm on master. Looks like a regression.
Broken between d1a4e043bdb0 - 25313582973b (bisecting now)

Adding Realize instances node resolves this particular issue.

Hi, thanks for the report. Can confirm on master. Looks like a regression. Broken between `d1a4e043bdb0` - `25313582973b` (bisecting now) Adding `Realize instances` node resolves this particular issue.
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Caused by 752c6d668b

cc @mano-wii

Caused by 752c6d668b cc @mano-wii
Dalai Felinto changed title from local view works only once on an object with geometry nodes and instances on points to Local view + Geometry Nodes is broken for instances 2021-12-24 11:59:19 +01:00

This issue was referenced by 1c7d7c9150

This issue was referenced by 1c7d7c915063c7f7c6c960aa843a33f3716debbe

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-12-29 16:37:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94113
No description provided.